--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <p class="endline"></p>
 </main>
 <footer>
-	Мой фидбек: Заборы никогда не строил, но если очень надо могу посторить
+	Мой фидбек: Заборы никогда не строил, но если очень надо могу построить
 	<br><br><br>
 	<h6>&copy; Максаев Павел, 2016 г.</h6>
 </footer>
