--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="files/style.css">
 </head>
 <body>
+<div class="plate">
 <header>
 	<h2>
 		Максаев Павел Анатольевич
@@ -42,6 +43,6 @@
 	<br><br><br>
 	<h6>&copy; Максаев Павел, 2016 г.</h6>
 </footer>
-
+</div>
 </body>	
 </html>
