--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="files/style.css">
 </head>
 <body>
+<div class="plate">
 <header>
 	<h2>
 		Максаев Павел Анатольевич
@@ -38,10 +39,9 @@
 <p class="endline"></p>
 </main>
 <footer>
-	Мой фидбек: Заборы никогда не строил, но если очень надо могу построить
-	<br><br><br>
+	Мой фидбек: Заборы никогда не строил, но если очень надо могу посторить
 	<h6>&copy; Максаев Павел, 2016 г.</h6>
 </footer>
-
+</div>
 </body>	
 </html>
